# autoresearch-observers

./: .gitignore  PROJECT_OVERVIEW.md  README.md  demo-deck.html  demo.html  index.html  observer-agent-plan.html  slides.html
docs/: LOCAL_SETUP.md  OBSERVER_HARNESS.md  PROJECT_OVERVIEW.md  README.md  REPLAY_STEERING_AND_EVAL.md  STEERING_ACTUATOR.md  VALUE_PROP.html  VALUE_PROP.md  complicated_agent_workflow_hard_problem_prompt.md  observer-nudger-architecture.md  opencode-subagent-injection-architecture.html
env/: README.md
opencode-observer-gate/: README.md  package.json  steer.example.json  tsconfig.json
opencode-observer-gate/src/: config.ts  index.ts  observer-client.ts
opencode-observer-gate/tests/: config.test.ts  observer-client.test.ts  plugin.test.ts
opencode-raindrop-tracing/: .env.example  .gitignore  README.md  setup.sh
opencode-raindrop-tracing/config/: opencode.json  raindrop.json
raindrop-workshop/: .gitignore  LICENSE  README.md  bunfig.toml  drizzle.config.ts  eslint.config.mjs  latest.json  package.json  tsconfig.eslint.json  tsconfig.json
raindrop-workshop/app/: index.html  package.json  playwright.config.ts  replay-plan.md  tailwind.config.js  tsconfig.json  vite.config.ts
raindrop-workshop/drizzle/: 0000_massive_winter_soldier.sql  0001_cynical_betty_brant.sql  0002_observer_steering_events.sql  0003_shiny_sharon_ventura.sql
raindrop-workshop/examples/: README.md  loadEnv.ts
raindrop-workshop/examples/rust-chat/: Cargo.toml  README.md
raindrop-workshop/examples/rust-chat/src/: main.rs
raindrop-workshop/scripts/: dev-all.ts  (+9 more)
(+228 files in other folders)
